# ais

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  Makefile  PRIVACY.md  README.md  THIRD-PARTY-NOTICES.txt  limitations.txt  performance.txt
.claude/: settings.json
.claude/skills/ais/: SKILL.md
.claude/skills/flutter-uitest/: SKILL.md
.github/workflows/: native-windows.yml  release.yml  sanitizers.yml  wasm-pwa.yml
app/: README.md  app.css  index.html  manifest.webmanifest  sw.js
app/flutter/: .flutter-plugins-dependencies  README.md  pubspec.yaml
app/flutter/.dart_tool/: package_config.json  package_graph.json
app/flutter/android/: key.properties.example
app/flutter/android/app/: build.gradle.kts
app/flutter/ios/: TODO.md
app/flutter/ios/Runner/: Info.plist  SceneDelegate.swift
app/flutter/ios/Runner.xcodeproj/: project.pbxproj
app/flutter/lib/: add_validation.dart  ais_ffi.dart  main.dart
app/flutter/linux/: CMakeLists.txt
app/flutter/linux/runner/: my_application.cc
app/flutter/src/: CMakeLists.txt  assert_no_undefined_crypto.cmake
app/flutter/test/: add_save_error_test.dart
app/flutter/tool/: verify_bundle.dart  verify_syncfolder.dart  verify_tags.dart
app/flutter/uitest/: README.md  run.sh
c/: Makefile  ais.c  ais.h  b64.c  b64.h  common.h  compact.c  compact.h  db.h  doc.c  doc.h  embed.c  embed.h  feed.c  feed.h  find.c  find.h  help.c  help.h  key.c  key.h  locate.c  locate.h  log.c  log.h  main.c  merge.c  merge.h  post.c  post.h  secret.c  secret.h  serve.c  serve.h  stats.c  stats.h  store.c  store.h  sync.c  sync.h  (+3 more)
c/attic/: .nobuild  db.c  set.c  set.h
c/crypto/: README.md  WHY.md  ais_crypto.c  ais_crypto.h  vendor-monocypher.sh
doc/: HOWTO_playstore.md  LAYOUT.md  OVERVIEW.md  PRIORITY.md  ROADMAP.md  STYLE.md  SYNC.md  USING.txt  about.txt  android-install.md  android-release.sh  android-release.txt  foundation.md  limitations.txt  migration.txt  performance.txt  store-listing.txt  sync-description.txt
doc/dev/: BNF.txt  DISTRIBUTION.md  GUI.md  IOS_NATIVE.md  LAYOUT.md  LOCKING.md  MERGE.md  README.md  SIGNING.md  STYLE.md  SYNC.md  SYNC_PROTOCOL.md  WASM-PWA.md  WHY-C.md  WHY-PLAIN-TEXT.md  WINDOWS_FILE_SYNC.md
doc/history/: PRIORITY.md  first_interaction_history.txt
doc/original/manifests/: legacy-file-manifest.txt
doc/original/sourceforge/: project-summary.md  sourceforge-metadata.json
doc/original/sourceforge-archive/sourceforge.net/: robots.txt
example/: off  store
example/blobs/: 2026-06-10-132622-2.txt
experiment/: README.md  analyze.py  questions.json  results_repeats_sanitized.csv  run.py  server.py
experiment/index/: off  store
experiment/index/idx/be/: beach
experiment/index/idx/bi/: birthday
experiment/index/idx/ha/: hawaii
experiment/index/idx/mo/: mother
experiment/index/idx/pe/: peter
experiment/index/idx/ph/: photo
gui/: README.md  ais-put.py  ais-put.tcl  ais-start.bat  ais-web.bat  ais-web.command  ais-web.desktop  ais.tcl
gui/web/: README.txt  ais-serve.py  index.html
installer/: README-portable.txt  README.txt  ais.iss
installer/winget/: README.md
installer/winget/0.2.3/: Anode1.AIS.installer.yaml  Anode1.AIS.locale.en-US.yaml  Anode1.AIS.yaml
legacy/: NOTICE.md  README.md  project-summary.md
legacy/ais/: README  ais  ais.bat  server  server.bat  swing  swing.bat
legacy/ais-scripts/: README  TODO  common  delete  dict  files2db.sh  get  pump.sh  put  testwords  unit_test.sh
legacy/ais-scripts/CVS/: Entries  Repository  Root
legacy/ais-scripts/INDEX/CVS/: Repository
legacy/ais-scripts/tmp/CVS/: Repository
legacy/ais/conf/: log4j.properties  system.properties
legacy/ais/www/: advanced.html  back_advanced.shtml  get.html  get.shtml  help.html  index_yui.html  paginator_yui.html  put.html  results_footer.shtml  results_header.shtml  snoop.jsp
legacy/ais/www/WEB-INF/: web.xml
legacy/ais/www/js/: ais.js  main.js
legacy/manifests/: downloads-sha256.txt
man/: README.txt  ais.1
plugins/: README.md
plugins/hello_world/: README.txt  ais-hello  manifest.json
plugins/hello_world/sandbox/: run.sh
scripts/: dist.sh  example.sh  ut_hook.sh
scripts/hooks/: pre-push
tests/: README.md  cli.sh  run.sh
tests/INDEX/: store
tests/gui/: cdp.c  cdp.h  cdptest.c  flutter.sh  inter.sh  qr-check.js  qr.golden  serve.sh  ui.sh  windows.sh
tests/perf/: .gitignore  Bench.java  LANG_COMPARISON.md  bench.adb  bench.c  bench.py  bench.rs  gen.py  lang_bench.sh  spark_prove.sh
tests/perf/spark/: merge.adb  merge.ads  merge.gpr
tests/poc-rust-merge/: .gitignore  Makefile  README.md  merge.rs  poc.c
tests/shot/: README.md  shot.sh
util/: .gitignore  Makefile  README.md  exif-tag.sh  exif.c  mktest.c  test.sh
win32/: Makefile  README.md  ais-gui.c  ais.manifest  ais.rc
(+55 files in other folders)
